docs: ritza july edits (#55)
Co-authored-by: bethh0rn <elizabethhorn.eh@gmail.com>
Co-authored-by: tatenda <tatendamvh@gmail.com>

--- a/docs/customize/code/code-regions/typescript.mdx
+++ b/docs/customize/code/code-regions/typescript.mdx
@@ -1,12 +1,12 @@
 ---
-title: Custom code regions in TypeScript
+title: Custom Code Regions in TypeScript
 description: "Learn how to use custom code regions in TypeScript SDKs."
 ---
 
 # Custom code regions in TypeScript
 
 To enable custom code regions for TypeScript SDKs, update the project's
-`.speakeasy/gen.yaml` file like so:
+`.speakeasy/gen.yaml` file as follows:
 
 ```diff .speakeasy/gen.yaml
 configVersion: 2.0.0
@@ -19,8 +19,7 @@ typescript:
 
 ## Full example
 
-The Speakeasy examples repository has a [full example](https://github.com/speakeasy-api/examples/tree/main/customcode-sdkclasses-typescript) of a TypeScript
-SDK that uses custom code regions.
+The Speakeasy examples repository includes a [full TypeScript SDK](https://github.com/speakeasy-api/examples/tree/main/customcode-sdkclasses-typescript) that uses custom code regions.
 
 
 ## Regions
@@ -31,11 +30,11 @@ Below are the available code regions in TypeScript SDKs.
 
 TypeScript SDK classes can have two code regions:
 
-* `// #region imports` - allows the addition of imports to an SDK file needed for
-custom methods and properties. This region must be located at the top of the
+* `// #region imports`: The imports region allows you to add imports to an SDK file needed for
+custom methods and properties. It must be located at the top of the
 file alongside generated imports.
-* `// #region sdk-class-body` - allows the addition of custom methods and
-properties to an SDK class. This region must be located in the body of a TypeScript
+* `// #region sdk-class-body`: The class-body region allows you to add custom methods and
+properties to an SDK class. It must be located in the body of a TypeScript
 SDK class alongside generated methods and properties.
 
 ## Managing dependencies
@@ -54,7 +53,7 @@ typescript:
       react: "^18.0.0"
 ```
 
-This ensures dependencies persist across SDK regenerations and are properly included in the generated `package.json`.
+This ensures that dependencies persist across SDK regenerations and are properly included in the generated `package.json`.
 
 ```typescript src/sdk/todos.ts
 /*
