--- a/docs/terraform/provider-configuration.mdx
+++ b/docs/terraform/provider-configuration.mdx
@@ -3,13 +3,13 @@ title: "Provider Configuration"
 description: "Learn how to customize the generated Terraform Provider, such as supporting environment variables and custom resources."
 ---
 
-# Provider Configuration
+# Provider configuration
 
 ## Security
 
-The generated Terraform Provider will automatically implement all global security as defined in the OpenAPI Specification via the root level `security` property and its associated `securitySchemes` components. Multiple security options are supported.
+The generated Terraform Provider will automatically implement all global security, as defined in the OpenAPI Specification, via the root-level `security` property and its associated `securitySchemes` components. Multiple security options are supported.
 
-In this example, the provider will be generated with bearer authenticiation token requirement using an `access_token` provider-level attribute:
+In this example, the generated provider requires a bearer authentication token using an `access_token` provider-level attribute:
 
 ```yaml
 components:
@@ -21,17 +21,17 @@ security:
   - accessToken: []
 ```
 
-Refer to the [Configuring Environment Variables section](#configuring-environment-variables) to optionally enable fallback environment variable configuration of the value.
+Refer to the [Configuring environment variables](#configuring-environment-variables) section to optionally enable the fallback environment variable configuration of the value.
 
-Operation-level security is not supported nor recommended. Instead, it is generally more desirable to implement separate providers per security layer. Terraform practitioners are conventionally used to the layering of provider implementations for this use case and Terraform itself is designed around those separation of concerns. Refer to the [HashiCorp provider design principles documentation](https://developer.hashicorp.com/terraform/plugin/best-practices/hashicorp-provider-design-principles) for more context.
+Operation-level security is neither supported nor recommended. Instead, we recommend implementing separate providers for each security layer. Terraform practitioners are conventionally used to the layering of provider implementations for this use case, and Terraform itself is designed around this separation of concerns. Refer to the [HashiCorp provider design principles](https://developer.hashicorp.com/terraform/plugin/best-practices/hashicorp-provider-design-principles) for more context.
 
 ## Globals
 
-Enable provider-level configuration of common properties across many resources via the [`x-speakeasy-globals` extension](/docs/customize/globals). This customization allows Terraform practitioners to configure a value via:
+Use the [`x-speakeasy-globals` extension](/docs/customize/globals) to enable provider-level configuration of common properties across multiple resources. This customization allows Terraform practitioners to configure a value in three ways:
 
-* Provider-level only: Default value applied to any resources that use the global
-* Resource-level only: Explicit value applied to only those resource instance(s)
-* Provider-level with resource-level override: Default value applied to any resources that use the global with any explicit resource-level configuration overriding the provider-level value
+* **Provider-level only:** The default value is applied to any resources that use the global.
+* **Resource-level only:** The explicit value is applied only to those resource instance(s).
+* **Provider-level with resource-level override:** The default value is applied to any resources that use the global, but any explicit resource-level configurations override the provider-level value.
 
 In this example, the provider will accept an `organization_id` configuration as a global:
 
@@ -44,9 +44,9 @@ x-speakeasy-globals:
         type: string
 ```
 
-## Configuring Environment Variables
+## Configuring environment variables
 
-Use the `environmentVariables` configuration in the `gen.yaml` to set up an environment variable fallback for provider attribute data configuration. For example, accepting an access token value via environment variable, rather than requiring explicit `provider` block attribute configuration from Terraform practitioners.
+Use the `environmentVariables` configuration in the `gen.yaml` to set up an environment variable fallback for configuring provider attribute data. For example, the fallback may be accepting an access token value via an environment variable, rather than requiring an explicit `provider` block attribute configuration from Terraform practitioners.
 
 ```yaml
 terraform:
@@ -57,11 +57,11 @@ terraform:
       providerAttribute: access_token
 ```
 
-The `environmentVariables` configuration is expected to be a list of objects with `{env: string, providerAttribute: string}` keys and values. These will create associations from environment variables (referenced as `env`) with provider attributes (referenced as `providerAttribute`).
+The `environmentVariables` configuration is expected to be a list of objects with `{env: string, providerAttribute: string}` keys and values. These associate environment variables (referenced as `env`) with provider attributes (referenced as `providerAttribute`).
 
-## Additional Provider Configurations
+## Additional provider configurations
 
-Enable Terraform configurations to specify additional provider-wide customizations in the generation configuration (`gen.yaml`) file with the `additionalProviderAttributes` configuration, for example:
+Use the `additionalProviderAttributes` configuration in the `gen.yaml` file to enable Terraform configurations to specify additional provider-wide customizations. For example:
 
 ```yaml
 terraform:
@@ -69,9 +69,9 @@ terraform:
     # ... configuration ...
 ```
 
-### Custom HTTP Headers
+### Custom HTTP headers
 
-Set the `httpHeaders` configuration with the desired attribute name to enable Terraform configurations to specify a mapping of additional HTTP headers for all HTTP requests.
+Set the `httpHeaders` configuration with the desired attribute name to enable Terraform configurations to map additional HTTP headers for all HTTP requests.
 
 In this example, HTTP header customization is enabled using the `http_headers` provider attribute name:
 
@@ -81,7 +81,7 @@ terraform:
     httpHeaders: http_headers
 ```
 
-This configuration enables provider configuration such as:
+This configuration enables a provider configuration, such as:
 
 ```hcl
 provider "examplecloud" {
@@ -91,9 +91,9 @@ provider "examplecloud" {
 }
 ```
 
-### Skip TLS Verification
+### Skip TLS verification
 
-Set the `tlsSkipVerify` configuration with the desired attribute name to enable Terraform configurations to specify a boolean to disable TLS verification in the HTTP client.
+Set the `tlsSkipVerify` configuration with the desired attribute name to enable Terraform configurations to specify a Boolean to disable TLS verification in the HTTP client.
 
 In this example, TLS verification customization is enabled using the `tls_skip_verify` provider attribute name:
 
@@ -103,7 +103,7 @@ terraform:
     tlsSkipVerify: tls_skip_verify
 ```
 
-This configuration enables provider configuration such as:
+This configuration enables a provider configuration, such as:
 
 ```hcl
 provider "examplecloud" {
@@ -111,9 +111,9 @@ provider "examplecloud" {
 }
 ```
 
-## Custom Resources or Data Sources
+## Custom resources or data sources
 
-If you would like to include an existing resource that is outside of the Speakeasy-generated provider, reference it in `gen.yaml` like so:
+To include an existing resource that is outside of the Speakeasy-generated provider, reference it in `gen.yaml` as follows:
 
 ```yaml
 terraform:
@@ -131,10 +131,10 @@ terraform:
       resource: custom.NewCustomEphemeralResource
 ```
 
-The `additionalResources` key is expected to contain a list of `{ importLocation?: string, importAlias?: string, resource: string }` objects. Each `resource` will be inserted into the provider managed resource list. If `importLocation` or `importAlias` is defined, Speakeasy will add that to the import list at the top of the provider file. The value of `resource` is arbitrary text, and could contain a function invocation if desired.
+The `additionalResources` key is expected to contain a list of `{ importLocation?: string, importAlias?: string, resource: string }` objects. Each `resource` is inserted into the provider-managed resource list. If `importLocation` or `importAlias` is defined, Speakeasy adds them to the import list at the top of the provider file. The value of `resource` is arbitrary text, and could contain a function invocation if desired.
 
-The `additionalEphemeralResources` key follows the same syntax, but will insert ephemeral resources into the provider.
+The `additionalEphemeralResources` key follows the same syntax, but inserts ephemeral resources into the provider.
 
-The `additionalDataSources` key follows the same syntax, but will insert data resources into the provider using `datasource` (instead of `resource`) as the value inserted into the list.
+The `additionalDataSources` key follows the same syntax, but inserts data resources into the provider using `datasource` (instead of `resource`) as the value inserted into the list.
 
 To learn more about how to write a Terraform resource, please consult the [official Terraform documentation](https://developer.hashicorp.com/terraform/plugin/framework).
