--- a/docs/terraform/resource-configuration.mdx
+++ b/docs/terraform/resource-configuration.mdx
@@ -1,13 +1,13 @@
 ---
 title: "Resource Configuration"
-description: "Learn how to customize a generated Terraform Provider resource, such as custom descriptions."
+description: "Learn how to customize a generated Terraform Provider resource with custom descriptions and versioning."
 ---
 
 import { Table } from "@/mdx/components";
 
-# Resource Configuration
+# Resource configuration
 
-## Resource Documentation
+## Resource documentation
 
 Speakeasy automatically generates provider and resource documentation that is compliant with the [public Terraform Registry requirements](https://developer.hashicorp.com/terraform/registry/providers/docs) via the HashiCorp-maintained [`terraform-plugin-docs`](https://github.com/hashicorp/terraform-plugin-docs) tool. Speakeasy runs `terraform-plugin-docs` at the end of successful generations or manually run via `go generate ./...`.
 
@@ -60,7 +60,7 @@ The `terraform-plugin-docs` tool also supports its own advanced use case customi
 
 ### Resource Description
 
-The `x-speakeasy-entity-description` extension allows modification of the description of a Terraform data or managed resource. This is useful when augmenting the documentation in an OpenAPI specification with documentation for specific resources. This documentation is expected to be in Markdown format. Use this extension alongside the `x-speakeasy-entity` extension.
+The `x-speakeasy-entity-description` extension modifies the description of a Terraform data or managed resource. This is useful when augmenting the documentation for specific resources in an OpenAPI document. This documentation is expected to be in Markdown format. Use this extension alongside the `x-speakeasy-entity` extension.
 
 In this example, an order managed resource will have `Manage a coffee order.` written as the description in the resource code for any consuming tools, including documentation written by `terraform-plugin-docs` into `docs/resources/order.md`:
 
@@ -76,7 +76,7 @@ components:
 
 ### Resource Example
 
-Example resource configuration is based on the OpenAPI Specification for API operation request and response data schemas. Speakeasy only generates example configuration for configurable properties. Example configuration values use the property `example` field when available or fallback to a generated value of the expected type following any `enum` or validation fields.
+Example resource configuration is based on the OpenAPI Specification for API operation request and response data schemas. Speakeasy only generates example configuration for configurable properties. Example configuration values use the property `example` field when available or, as a fallback, use a generated value of the expected type following any `enum` or validation fields.
 
 Fully customize the example resource configuration by using Speakeasy [code customization capabilities](/docs/customize/code/monkey-patching).
 
@@ -86,9 +86,9 @@ For example, to manually manage and update the example configuration for a manag
 * Edit `examples/resources/{type}/resource.tf` as necessary
 * Run `go generate ./...` or Speakeasy generation to update `docs/resources/{name}.md`
 
-## Resource Version
+## Resource version
 
-The `x-speakeasy-entity-version` extension specifies the version of a given resource and should *only* be used if you need to write a state migrator, for instance, if you are changing the type of a field.
+The `x-speakeasy-entity-version` extension specifies the version of a given resource and should **only** be used if you need to write a state migrator, for instance, if you are changing the type of a field.
 
 Terraform resource versions are zero-indexed and default to `0`. For your first breaking change requiring a state migrator, set `x-speakeasy-entity-version: 1`. Each state migrator function must migrate from the previous version of the state.
 
