--- a/mcp/ai-agents/real-world-examples.mdx
+++ b/mcp/ai-agents/real-world-examples.mdx
@@ -12,7 +12,7 @@ import GramCallout from "../.partials/gram-callout.mdx";
 
 For the past few months, while everyone and their dog were either vibe coding, vibe debugging (_"claude, plz fix"_), or Ghiblifying their family portraits, we've been heads-down and shipping the tools that help developers connect with our customers' APIs.
 
-At Speakeasy, we generate (no, the _other_ generate) [type-safe SDKs](https://www.speakeasy.com/product/sdk-generation) that look and work as if they were handwritten in the [low-background coding](https://en.wikipedia.org/wiki/Low-background_steel) days by world-class, biological, flesh-and-bone human engineers. At the risk of sounding like Luddites, we prefer SDKs that **humans** find easy to use. Development teams use our customers' services to, among other things, build the [scaffolding stitching modern APIs together](https://konghq.com/) and [manage their most important assets](https://clerk.com/). Besides usability, the importance of correctness, safety, and stability in the SDKs we generate can't be overstated.
+At Speakeasy, we generate (no, the _other_ generate) [type-safe SDKs](https://www.speakeasy.com/product/sdk-generation) that look and work as if they were handwritten in the [low-background coding](https://en.wikipedia.org/wiki/Low-background_steel) days by world-class, biological, flesh-and-bone human engineers. At the risk of sounding like Luddites, we prefer SDKs that **humans** find easy to use. Development teams use our customers' services to, among other things, build the [scaffolding that stitches modern APIs together](https://konghq.com/) and [manage their most important assets](https://clerk.com/). Besides usability, the importance of correctness, safety, and stability in the SDKs we generate can't be overstated.
 
 So, with all the [fear](https://invariantlabs.ai/blog/mcp-security-notification-tool-poisoning-attacks), [uncertainty](https://simonwillison.net/2025/Apr/9/mcp-prompt-injection/#i-don-t-know-what-to-suggest), and doubt commenters are sharing about the Model Context Protocol (MCP), and MCP's focus on enabling **agents instead of humans**, you may well wonder why we (the self-proclaimed defenders of API safety) are [embracing it so eagerly](https://www.speakeasy.com/post/release-model-context-protocol) instead of putting on the brakes.
 
@@ -71,13 +71,13 @@ flowchart TB
 
 If that sounds like word salad to you, we agree. We'll make the concept clear when we look at the examples below.
 
-## Example 1: Using the Claude desktop app to manage Notion tasks based on unstructured input
+## Example 1: Using Claude Desktop to manage Notion tasks based on unstructured input
 
 Here's a problem many of us struggle with: We receive requests that deserve some form of tracking, whether via email, WhatsApp, Signal, phone calls, or the biggest culprit of all - Slack. The requests or items that require action are often buried deep in threads, and occasionally, something falls through the cracks.
 
 This isn't a post about productivity or taking personal responsibility for getting things done, but this workflow has certainly helped some of us stay on top of small tasks that might otherwise have been lost in the netherworld that is Slack.
 
-Our solution is to use the Claude desktop app with a Notion MCP server to figure out which actions to keep track of and to keep track of them in Notion.
+Our solution is to use Claude Desktop with a Notion MCP server to figure out which actions to keep track of and to keep track of them in Notion.
 
 ```mermaid
 flowchart TB
@@ -87,7 +87,7 @@ flowchart TB
     classDef serviceNodeStyle fill:#555,stroke:#ff0,stroke-width:2px,color:#ff0
 
     %% Client section
-    subgraph client["Claude for Desktop (MCP Client)"]
+    subgraph client["Claude Desktop (MCP Client)"]
         ClaudeAgent["Claude Agent"]:::clientNodeStyle
         ClaudeMCP{"MCP Client Library"}:::clientNodeStyle
         ClaudeAgent ==> ClaudeMCP
@@ -126,7 +126,7 @@ In this chart, we see how the Notion MCP server communicates with the Notion API
 
 We'll need three elements to get this working:
 
-1. The [Claude](https://claude.ai/download) desktop app installed on macOS or Windows.
+1. [Claude Desktop](https://claude.ai/download) installed on macOS or Windows.
 2. Access to a [Notion workspace](https://www.notion.so) with either:
    - Permission to manage [Notion Integrations](https://www.notion.so/my-integrations) yourself.
    - A workspace admin you can ask to add an integration.
@@ -156,7 +156,7 @@ The most popular Notion MCP server we could find on GitHub was [`suekou/mcp-noti
   </p>
 </Callout>
 
-### Installing the Notion MCP server in Claude for Desktop
+### Installing the Notion MCP server in Claude Desktop
 
 Now that we have our MCP server and version, we'll add a command to install and run the server to the Claude configuration file, which you can find here:
 
@@ -299,7 +299,7 @@ If you don't have a secure messaging channel to test this yourself, try this: Wr
 
 A screenshot of a handwritten list is at the extreme end of how we've been using this method. This can also be useful when copying tasks from meeting notes, emails, and, of course, Slack threads.
 
-## Example 2: Using the Claude desktop app to create 3D graphics in Blender
+## Example 2: Using Claude Desktop to create 3D graphics in Blender
 
 This one might appeal more to the vibe coders building games. Let it be known that the author has never used Blender before, and probably never will again, but the idea of one day printing 3D objects seems cool (more so than vibe coding games), so this is exploratory.
 
@@ -313,7 +313,7 @@ flowchart TB
     classDef appNodeStyle fill:#555,stroke:#ff0,stroke-width:2px,color:#ff0
 
     %% Client section
-    subgraph client["Claude for Desktop (MCP Client)"]
+    subgraph client["Claude Desktop (MCP Client)"]
         ClaudeAgent["Claude Agent"]:::clientNodeStyle
         ClaudeMCP{"MCP Client Library"}:::clientNodeStyle
         ClaudeAgent ==> ClaudeMCP
@@ -355,7 +355,7 @@ You'll need:
 1. [Blender](https://www.blender.org/download/) 3.0 or newer.
 2. [Python](https://www.python.org/downloads/) 3.10 or newer.
 3. The [uv package manager](https://github.com/astral-sh/uv?tab=readme-ov-file#installation) for Python.
-4. [Claude for desktop](https://claude.ai/download) or [any other MCP client](https://modelcontextprotocol.io/clients) that supports tools.
+4. [Claude Desktop](https://claude.ai/download) or [any other MCP client](https://modelcontextprotocol.io/clients) that supports tools.
 
 ### Finding and installing a Blender MCP server
 
