--- a/mcp/building-servers/building-fastapi-server.mdx
+++ b/mcp/building-servers/building-fastapi-server.mdx
@@ -43,7 +43,7 @@ Now run the API:
 uvicorn app.main:server --reload
 ```
 
-It's a good idea to have [Claude Desktop](https://claude.ai/download) installed on your machine to test the MCP servers. 
+It's a good idea to have [Claude Desktop](https://claude.ai/download) installed on your machine to test the MCP servers.
 
 ## Building an MCP server with FastAPI and FastMCP
 
@@ -67,7 +67,7 @@ cd app/ && touch mcp_server.py
 
 ### 3. Creating the MCP server
 
-Add the code below to the `mcp_server.py` file: 
+Add the code below to the `mcp_server.py` file:
 
 ```python
 from fastmcp import FastMCP
@@ -82,7 +82,7 @@ if __name__ == "__main__":
 
 This code first registers your FastAPI app with FastMCP. Then, FastMCP inspects the app, finds the declared routes in `app/main.py`, and turns each route into an MCP tool without needing any additional configuration.
 
-### 4. Adding the MCP server to Claude Desktop
+### 4. Adding the MCP server to Claude desktop
 
 There is no need to write the configuration to add the MCP server to Claude Desktop. Navigate to the `app` directory and run the following command:
 
@@ -178,7 +178,7 @@ Without visibility, debugging tool behavior can be difficult when something brea
 
 ### 1. Installing the Speakeasy CLI
 
-First, install the [Speakeasy CLI](https://www.speakeasy.com/docs/introduction#install-the-speakeasy-cli) on your machine. 
+First, install the [Speakeasy CLI](https://www.speakeasy.com/docs/introduction#install-the-speakeasy-cli) on your machine.
 
 On macOS or Linux:
 
@@ -231,7 +231,7 @@ Speakeasy will ask you where to save the generated SDK and what to name the npm 
 
 Speakeasy will generate a TypeScript SDK in the `mcp-burger-sdk-typescript` directory. The MCP server code will be located at `mcp-burger-sdk-typescript/src/mcp-server`, with a built version at `mcp-burger-sdk-typescript/bin/mcp-server.js` (this is the file you'll reference in your Claude Desktop configuration).
 
-### 5. Adding the MCP server to Claude Desktop
+### 5. Adding the MCP server to Claude desktop
 
 Now configure the MCP server in the `claude-desktop-config.json` file:
 
