--- a/mcp/building-servers/optimizing-openapi.mdx
+++ b/mcp/building-servers/optimizing-openapi.mdx
@@ -40,7 +40,7 @@ Speakeasy extracts every detail from your OpenAPI document: endpoints, methods, 
 
 These tools are designed to be easily consumed by AI models, providing them with the necessary context to understand how to interact with your API.
 
-You can then give your AI tool access to the MCP server, and the available tools and their parameters.
+You can then give your AI tool access to the MCP server and the available tools and their parameters.
 
 When Speakeasy generates your TypeScript SDK from an OpenAPI document, it also creates a corresponding MCP server. This MCP server is a lightweight wrapper around the generated SDK, specifically optimized for AI agent interactions.
 
@@ -217,7 +217,7 @@ This MCP tool is generated directly from the OpenAPI document, and it provides a
 
 ### Natural language becomes API calls
 
-Let's take a look at how this works in practice. Say a user asks, _"What's Lewis Hamilton's fastest lap at Silverstone?"_ using Claude desktop.
+Let's take a look at how this works in practice. Say a user asks, _"What's Lewis Hamilton's fastest lap at Silverstone?"_ using Claude Desktop.
 
 ![Claude fetching a lap time](/assets/mcp/optimizing/claude-desktop-example.png)
 
@@ -351,7 +351,7 @@ npx mcp start --scope read
 npx mcp start --scope read --scope write
 ```
 
-If you're using the Claude desktop app, you can also specify scopes in the config:
+If you're using Claude Desktop, you can also specify scopes in the config:
 
 ```json
 {
