--- a/docs/standalone-mcp/build-server.mdx
+++ b/docs/standalone-mcp/build-server.mdx
@@ -41,6 +41,45 @@ To build an MCP server using Speakeasy:
 
 This creates a TypeScript-based MCP server in the specified directory ready to be deployed into production.
 
+## Desktop Extension (DXT) Generation
+
+Speakeasy automatically generates [Anthropic Desktop Extensions (.dxt)](https://github.com/anthropics/dxt) as part of standalone MCP generation. Desktop Extensions provide a packaged format for distributing MCP servers that can be easily installed and managed in Claude Desktop and other MCP-compatible clients.
+
+### Automatic DXT Creation
+
+When generating an MCP server, Speakeasy automatically creates a DXT package alongside your TypeScript server code. The DXT includes:
+
+- A `manifest.json` file with metadata describing your MCP server
+- All necessary server files packaged for distribution
+- Tool descriptions and parameters automatically inferred from your OpenAPI specification
+- Icon and branding assets (if provided)
+
+### DXT Manifest Customization
+
+You can customize the generated DXT manifest through the `gen.yaml` configuration file using the `mcp-typescript.dxtManifestOverlay` key. This follows the [DXT Manifest specification](https://github.com/anthropics/dxt/blob/main/MANIFEST.md).
+
+```yaml
+targets:
+  mcp-typescript:
+    dxtManifestOverlay:
+      icon: "https://example.com/my-icon.png"
+      displayName: "My Custom API Tools"
+      description: "Custom description for my MCP server"
+      version: "1.0.0"
+```
+
+### DXT Manifest Population
+
+The DXT manifest is automatically populated using a convention-over-configuration approach:
+
+- **Tool definitions**: Automatically inferred from OpenAPI operations
+- **Parameters**: Derived from OpenAPI parameters and request schemas  
+- **Descriptions**: Extracted from OpenAPI operation summaries and descriptions
+- **Icon**: Automatically detected by searching for `.png` files in your project
+- **Metadata**: Pulled from your `gen.yaml` configuration and OpenAPI info section
+
+This ensures the DXT always remains synchronized with your generated MCP server, maintaining a shared source of truth between the server implementation and its distribution package.
+
 ## Example server code
 
 The generated MCP server includes a comprehensive file structure with TypeScript source code:
@@ -156,7 +195,17 @@ The generated MCP server includes a comprehensive file structure with TypeScript
 
 ## Run your MCP server locally
 
-Configure your MCP server to run locally in your MCP client (like Claude Desktop):
+### Using the Generated DXT
+
+The easiest way to test your MCP server locally is to use the generated DXT package. Claude Desktop and other MCP clients can load DXT files directly:
+
+1. **Locate your generated DXT file** in the output directory (typically with a `.dxt` extension)
+2. **Install the DXT** in your MCP client following the client's installation process
+3. **Configure environment variables** if your server requires authentication
+
+### Traditional MCP Configuration
+
+You can also configure your MCP server to run locally using traditional MCP configuration:
 
 ```json
 {
@@ -230,12 +279,29 @@ You can further limit the subset of tools mounted on an MCP server by specifying
 
 ## Distribution methods
 
-Speakeasy generates MCP servers that can be published and distributed as npm packages or used directly with `npx`. This allows you to:
+Speakeasy generates MCP servers with multiple distribution options:
+
+### Desktop Extension (DXT) Distribution
+
+The generated DXT package provides the most user-friendly distribution method:
+
+- **Easy installation**: Users can install DXT files directly in compatible MCP clients
+- **Self-contained**: All dependencies and metadata are bundled together
+- **Automatic updates**: DXT format supports version management and update notifications
+- **Cross-platform**: Works across different operating systems and MCP clients
+
+### Traditional Distribution
+
+MCP servers can also be published and distributed as npm packages or used directly with `npx`:
 
 - Share tools across teams
-- Deploy to different environments
+- Deploy to different environments  
 - Distribute to external users
 - Version and maintain your MCP servers independently
+
+### Hybrid Approach
+
+You can distribute your MCP server using both methods simultaneously, giving users the flexibility to choose their preferred installation method.
 
 ## Best practices
 
@@ -247,6 +313,8 @@ When building MCP servers with Speakeasy:
 4. **Test thoroughly** - Verify your MCP server works with different clients
 5. **Version your APIs** - Use semantic versioning for your OpenAPI specifications
 6. **Monitor performance** - Track usage and performance of your MCP tools
+7. **Provide clear branding** - Include a `.png` icon file in your project for automatic [DXT](https://www.anthropic.com/engineering/desktop-extensions) icon detection
+8. **Customize DXT metadata** - Use `dxtManifestOverlay` in `gen.yaml` to provide custom display names and descriptions
 
 ## Next steps
 
