update image paths

--- a/mcp/building-servers/less-is-more.mdx
+++ b/mcp/building-servers/less-is-more.mdx
@@ -34,7 +34,7 @@ This way, each MCP server is tailored to the specific needs of its users, reduci
 
 Here's what that might look like in practice:
 
-![Diagram comparing two MCP server approaches. Top section labeled with red text Single Monolithic Server Bad Approach shows one large server containing 12 mixed tools including getCustomer, getProductInfo, getSalesData, getMarketingCampaigns, getSupportTickets, getFeedback, updateCustomerRecord, createSalesOpportunity, scheduleMarketingEmail, escalateSupportTicket, generateSalesReport, and trackCampaignMetrics. Bottom section labeled with green text Curated Server Approach (Recommended) shows three smaller focused servers: Sales MCP containing 6 sales-specific tools, Marketing MCP containing 6 marketing-focused tools, and Support MCP containing 7 support-related tools. Each curated server includes relevant getCustomer and getProductInfo tools for their specific context. Green text below each server explains that teams get only relevant tools. The diagram uses red borders for the problematic approach and green borders for the recommended solution, conveying a clear instructional tone about best practices for MCP server organization.](../assets/less-is-more/mcp-curated.svg?url)
+![Diagram comparing two MCP server approaches. Top section labeled with red text Single Monolithic Server Bad Approach shows one large server containing 12 mixed tools including getCustomer, getProductInfo, getSalesData, getMarketingCampaigns, getSupportTickets, getFeedback, updateCustomerRecord, createSalesOpportunity, scheduleMarketingEmail, escalateSupportTicket, generateSalesReport, and trackCampaignMetrics. Bottom section labeled with green text Curated Server Approach (Recommended) shows three smaller focused servers: Sales MCP containing 6 sales-specific tools, Marketing MCP containing 6 marketing-focused tools, and Support MCP containing 7 support-related tools. Each curated server includes relevant getCustomer and getProductInfo tools for their specific context. Green text below each server explains that teams get only relevant tools. The diagram uses red borders for the problematic approach and green borders for the recommended solution, conveying a clear instructional tone about best practices for MCP server organization.](/assets/less-is-more/mcp-curated.svg?url)
 
 ## Why curated MCP servers are better
 
@@ -64,27 +64,27 @@ We created an OpenAPI document for the Dog API, with an endpoint per dog breed. 
 
 We then uploaded the OpenAPI document to Gram and created a single MCP server with all 107 tools, and installed this remote MCP server in Claude Desktop.
 
-On our very first test using Claude Sonnet 3.5, the LLM halucinated an endpoint for Golden Retrievers, when in fact there is only a single Retriever endpoint. Although later tests using Claude Code and Claude Desktop with different models yielded better results, the initial confusion was evident.
+On our very first test using Claude Sonnet 3.5, the LLM hallucinated an endpoint for Golden Retrievers, when in fact there is only a single Retriever endpoint. Although later tests using Claude Code and Claude Desktop with different models yielded better results, the initial confusion was evident.
 
 The effect of 107 tools in one server caused Claude Desktop to frequently stop responding after one sentence with a generic error:
 
 > Claude's response was interrupted. This can be caused by network problems or exceeding the maximum conversation length. Please contact support if the issue persists.
 
-![Claude Desktop interface displaying an error message in the chat area. The main content shows a conversation where Claude responds with I'll get four different dog images for you using the available tools, followed by a loading spinner. Below that is a red warning triangle icon next to an error message stating Claudes response was interrupted. This can be caused by network problems or exceeding the maximum conversation length. Please contact support if the issue persists. The interface has a dark theme with the characteristic Claude branding and shows the conversation was interrupted mid-response, demonstrating the performance issues that occur when an LLM is overwhelmed with too many tool options.](../assets/less-is-more/claude-network-issue.png)
+![Claude Desktop interface displaying an error message in the chat area. The main content shows a conversation where Claude responds with I'll get four different dog images for you using the available tools, followed by a loading spinner. Below that is a red warning triangle icon next to an error message stating Claudes response was interrupted. This can be caused by network problems or exceeding the maximum conversation length. Please contact support if the issue persists. The interface has a dark theme with the characteristic Claude branding and shows the conversation was interrupted mid-response, demonstrating the performance issues that occur when an LLM is overwhelmed with too many tool options.](/assets/less-is-more/claude-network-issue.png)
 
 Next, we decided to test the same MCP server using a smaller model on LM Studio. We used the `qwen/qwen3-1.7b` model, which is trained specifically for tool calling.
 
-With the same 107 tools, the model struggled to select a tool most of the time. It halucinated incorrect tool names based on patterns it recognized in the tool names.
+With the same 107 tools, the model struggled to select a tool most of the time. It hallucinated incorrect tool names based on patterns it recognized in the tool names.
 
 ![LM Studio interface showing a conversation where the qwen3-1.7b model fails to use correct tool names when presented with 107 dog breed API tools. The model attempts to call openapi_fetch_random_springer_photo and openapi_fetch_random_poodle_photo but receives error messages stating Cannot find tool with name followed by the attempted tool calls. The interface shows multiple failed tool call attempts in red error text, demonstrating how too many available tools causes smaller models to hallucinate incorrect function names.](/assets/less-is-more/lm-studio-107-tools-qwen.png)
 
 We then created several smaller MCP servers with fewer tools, each containing only a subset of the dog breeds. We tested these servers with the same `qwen/qwen3-1.7b` model in LM Studio.
 
-First, we created a server with 40 tools, which included a random selection of dog breeds. The model was able to successfully call three out of four tools, but still halucinated one endpoint.
+First, we created a server with 40 tools, which included a random selection of dog breeds. The model was able to successfully call three out of four tools, but still hallucinated one endpoint.
 
-![LM Studio interface displaying a conversation where the qwen3-1.7b model successfully uses correct tool names for three of four tool calls. It halucinated one endpoint.](/assets/less-is-more/lm-studio-40-tools-qwen.png)
+![LM Studio interface displaying a conversation where the qwen3-1.7b model successfully uses correct tool names for three of four tool calls. It hallucinated one endpoint.](/assets/less-is-more/lm-studio-40-tools-qwen.png)
 
-Next, we created a server with 20 tools, which included a mixture of random dog breeds. The model got 19 out of 20 tool calls correct, with only one halucinated tool call.
+Next, we created a server with 20 tools, which included a mixture of random dog breeds. The model got 19 out of 20 tool calls correct, with only one hallucinated tool call.
 
 ![LM Studio interface showing a successful conversation where the qwen3-1.7b model correctly uses all tool names when presented with only 20 dog breed API tools. The interface displays only one hallucinated tool call, demonstrating improved performance when the number of available tools is reduced to an optimal range for smaller language models.](/assets/less-is-more/lm-studio-20-tools-qwen.png)
 
@@ -102,9 +102,9 @@ We know this isn't an exhaustive test, nor is it scientific in any way. But this
 
 Here's a summary of our findings:
 
-**With 107 tools**, both large and small models struggled to select the correct tools, leading to frequent errors and halucinations.
+**With 107 tools**, both large and small models struggled to select the correct tools, leading to frequent errors and hallucinations.
 
-**With 20 tools**, the smaller model got 19 out of 20 tool calls correct, with only one halucinated tool call.
+**With 20 tools**, the smaller model got 19 out of 20 tool calls correct, with only one hallucinated tool call.
 
 **With 10 tools**, the model successfully retrieved images of four different dog breeds with correct tool names and no errors.
 
